--- a/k8s/crd/templates/v15.yaml
+++ b/k8s/crd/templates/v15.yaml
@@ -2,15 +2,15 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: policies-v15.beta.appgate.com
+  name: policies.v15.sdp.appgate.com
 spec:
-  group: beta.appgate.com
+  group: v15.sdp.appgate.com
   names:
-    kind: Policy-v15
-    plural: policies-v15
+    kind: Policy
+    plural: policies
     shortNames:
-    - pol-v15
-    singular: policy-v15
+    - pol
+    singular: policy
   scope: Namespaced
   versions:
   - name: v1
@@ -122,15 +122,15 @@ spec:
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: conditions-v15.beta.appgate.com
+  name: conditions.v15.sdp.appgate.com
 spec:
-  group: beta.appgate.com
+  group: v15.sdp.appgate.com
   names:
-    kind: Condition-v15
-    plural: conditions-v15
+    kind: Condition
+    plural: conditions
     shortNames:
-    - con-v15
-    singular: condition-v15
+    - con
+    singular: condition
   scope: Namespaced
   versions:
   - name: v1
@@ -185,15 +185,15 @@ spec:
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: entitlements-v15.beta.appgate.com
+  name: entitlements.v15.sdp.appgate.com
 spec:
-  group: beta.appgate.com
+  group: v15.sdp.appgate.com
   names:
-    kind: Entitlement-v15
-    plural: entitlements-v15
+    kind: Entitlement
+    plural: entitlements
     shortNames:
-    - ent-v15
-    singular: entitlement-v15
+    - ent
+    singular: entitlement
   scope: Namespaced
   versions:
   - name: v1
@@ -289,15 +289,15 @@ spec:
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: ringfencerules-v15.beta.appgate.com
+  name: ringfencerules.v15.sdp.appgate.com
 spec:
-  group: beta.appgate.com
+  group: v15.sdp.appgate.com
   names:
-    kind: RingfenceRule-v15
-    plural: ringfencerules-v15
+    kind: RingfenceRule
+    plural: ringfencerules
     shortNames:
-    - rin-v15
-    singular: ringfencerule-v15
+    - rin
+    singular: ringfencerule
   scope: Namespaced
   versions:
   - name: v1
@@ -352,15 +352,15 @@ spec:
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: appliances-v15.beta.appgate.com
+  name: appliances.v15.sdp.appgate.com
 spec:
-  group: beta.appgate.com
+  group: v15.sdp.appgate.com
   names:
-    kind: Appliance-v15
-    plural: appliances-v15
+    kind: Appliance
+    plural: appliances
     shortNames:
-    - app-v15
-    singular: appliance-v15
+    - app
+    singular: appliance
   scope: Namespaced
   versions:
   - name: v1
@@ -999,15 +999,15 @@ spec:
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: sites-v15.beta.appgate.com
+  name: sites.v15.sdp.appgate.com
 spec:
-  group: beta.appgate.com
+  group: v15.sdp.appgate.com
   names:
-    kind: Site-v15
-    plural: sites-v15
+    kind: Site
+    plural: sites
     shortNames:
-    - sit-v15
-    singular: site-v15
+    - sit
+    singular: site
   scope: Namespaced
   versions:
   - name: v1
@@ -1264,15 +1264,15 @@ spec:
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: ippools-v15.beta.appgate.com
+  name: ippools.v15.sdp.appgate.com
 spec:
-  group: beta.appgate.com
+  group: v15.sdp.appgate.com
   names:
-    kind: IpPool-v15
-    plural: ippools-v15
+    kind: IpPool
+    plural: ippools
     shortNames:
-    - ipp-v15
-    singular: ippool-v15
+    - ipp
+    singular: ippool
   scope: Namespaced
   versions:
   - name: v1
@@ -1320,15 +1320,15 @@ spec:
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: identityproviders-v15.beta.appgate.com
+  name: identityproviders.v15.sdp.appgate.com
 spec:
-  group: beta.appgate.com
+  group: v15.sdp.appgate.com
   names:
-    kind: IdentityProvider-v15
-    plural: identityproviders-v15
+    kind: IdentityProvider
+    plural: identityproviders
     shortNames:
-    - ide-v15
-    singular: identityprovider-v15
+    - ide
+    singular: identityprovider
   scope: Namespaced
   versions:
   - name: v1
@@ -1534,15 +1534,15 @@ spec:
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: localusers-v15.beta.appgate.com
+  name: localusers.v15.sdp.appgate.com
 spec:
-  group: beta.appgate.com
+  group: v15.sdp.appgate.com
   names:
-    kind: LocalUser-v15
-    plural: localusers-v15
+    kind: LocalUser
+    plural: localusers
     shortNames:
-    - loc-v15
-    singular: localuser-v15
+    - loc
+    singular: localuser
   scope: Namespaced
   versions:
   - name: v1
@@ -1590,15 +1590,15 @@ spec:
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: administrativeroles-v15.beta.appgate.com
+  name: administrativeroles.v15.sdp.appgate.com
 spec:
-  group: beta.appgate.com
+  group: v15.sdp.appgate.com
   names:
-    kind: AdministrativeRole-v15
-    plural: administrativeroles-v15
+    kind: AdministrativeRole
+    plural: administrativeroles
     shortNames:
-    - adm-v15
-    singular: administrativerole-v15
+    - adm
+    singular: administrativerole
   scope: Namespaced
   versions:
   - name: v1
@@ -1655,15 +1655,15 @@ spec:
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: mfaproviders-v15.beta.appgate.com
+  name: mfaproviders.v15.sdp.appgate.com
 spec:
-  group: beta.appgate.com
+  group: v15.sdp.appgate.com
   names:
-    kind: MfaProvider-v15
-    plural: mfaproviders-v15
+    kind: MfaProvider
+    plural: mfaproviders
     shortNames:
-    - mfa-v15
-    singular: mfaprovider-v15
+    - mfa
+    singular: mfaprovider
   scope: Namespaced
   versions:
   - name: v1
@@ -1720,15 +1720,15 @@ spec:
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: adminmfasettingss-v15.beta.appgate.com
+  name: adminmfasettingss.v15.sdp.appgate.com
 spec:
-  group: beta.appgate.com
+  group: v15.sdp.appgate.com
   names:
-    kind: AdminMfaSettings-v15
-    plural: adminmfasettingss-v15
+    kind: AdminMfaSettings
+    plural: adminmfasettingss
     shortNames:
-    - adi-v15
-    singular: adminmfasettings-v15
+    - adi
+    singular: adminmfasettings
   scope: Namespaced
   versions:
   - name: v1
@@ -1751,15 +1751,15 @@ spec:
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: trustedcertificates-v15.beta.appgate.com
+  name: trustedcertificates.v15.sdp.appgate.com
 spec:
-  group: beta.appgate.com
+  group: v15.sdp.appgate.com
   names:
-    kind: TrustedCertificate-v15
-    plural: trustedcertificates-v15
+    kind: TrustedCertificate
+    plural: trustedcertificates
     shortNames:
-    - tru-v15
-    singular: trustedcertificate-v15
+    - tru
+    singular: trustedcertificate
   scope: Namespaced
   versions:
   - name: v1
@@ -1790,15 +1790,15 @@ spec:
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: criteriascriptss-v15.beta.appgate.com
+  name: criteriascriptss.v15.sdp.appgate.com
 spec:
-  group: beta.appgate.com
+  group: v15.sdp.appgate.com
   names:
-    kind: CriteriaScripts-v15
-    plural: criteriascriptss-v15
+    kind: CriteriaScripts
+    plural: criteriascriptss
     shortNames:
-    - cri-v15
-    singular: criteriascripts-v15
+    - cri
+    singular: criteriascripts
   scope: Namespaced
   versions:
   - name: v1
@@ -1829,15 +1829,15 @@ spec:
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: devicescripts-v15.beta.appgate.com
+  name: devicescripts.v15.sdp.appgate.com
 spec:
-  group: beta.appgate.com
+  group: v15.sdp.appgate.com
   names:
-    kind: DeviceScript-v15
-    plural: devicescripts-v15
+    kind: DeviceScript
+    plural: devicescripts
     shortNames:
-    - dev-v15
-    singular: devicescript-v15
+    - dev
+    singular: devicescript
   scope: Namespaced
   versions:
   - name: v1
@@ -1871,15 +1871,15 @@ spec:
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: entitlementscripts-v15.beta.appgate.com
+  name: entitlementscripts.v15.sdp.appgate.com
 spec:
-  group: beta.appgate.com
+  group: v15.sdp.appgate.com
   names:
-    kind: EntitlementScript-v15
-    plural: entitlementscripts-v15
+    kind: EntitlementScript
+    plural: entitlementscripts
     shortNames:
-    - enr-v15
-    singular: entitlementscript-v15
+    - enr
+    singular: entitlementscript
   scope: Namespaced
   versions:
   - name: v1
@@ -1913,15 +1913,15 @@ spec:
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: appliancecustomizations-v15.beta.appgate.com
+  name: appliancecustomizations.v15.sdp.appgate.com
 spec:
-  group: beta.appgate.com
+  group: v15.sdp.appgate.com
   names:
-    kind: ApplianceCustomization-v15
-    plural: appliancecustomizations-v15
+    kind: ApplianceCustomization
+    plural: appliancecustomizations
     shortNames:
-    - apt-v15
-    singular: appliancecustomization-v15
+    - apt
+    singular: appliancecustomization
   scope: Namespaced
   versions:
   - name: v1
@@ -1952,15 +1952,15 @@ spec:
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: globalsettingss-v15.beta.appgate.com
+  name: globalsettingss.v15.sdp.appgate.com
 spec:
-  group: beta.appgate.com
+  group: v15.sdp.appgate.com
   names:
-    kind: GlobalSettings-v15
-    plural: globalsettingss-v15
+    kind: GlobalSettings
+    plural: globalsettingss
     shortNames:
-    - glo-v15
-    singular: globalsettings-v15
+    - glo
+    singular: globalsettings
   scope: Namespaced
   versions:
   - name: v1
@@ -2013,15 +2013,15 @@ spec:
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: clientconnections-v15.beta.appgate.com
+  name: clientconnections.v15.sdp.appgate.com
 spec:
-  group: beta.appgate.com
+  group: v15.sdp.appgate.com
   names:
-    kind: ClientConnection-v15
-    plural: clientconnections-v15
+    kind: ClientConnection
+    plural: clientconnections
     shortNames:
-    - cli-v15
-    singular: clientconnection-v15
+    - cli
+    singular: clientconnection
   scope: Namespaced
   versions:
   - name: v1
