--- a/k8s/crd/templates/v18.yaml
+++ b/k8s/crd/templates/v18.yaml
@@ -2,15 +2,15 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: policies-v18.beta.appgate.com
+  name: policies.v18.sdp.appgate.com
 spec:
-  group: beta.appgate.com
+  group: v18.sdp.appgate.com
   names:
-    kind: Policy-v18
-    plural: policies-v18
+    kind: Policy
+    plural: policies
     shortNames:
-    - pol-v18
-    singular: policy-v18
+    - pol
+    singular: policy
   scope: Namespaced
   versions:
   - name: v1
@@ -152,15 +152,15 @@ spec:
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: conditions-v18.beta.appgate.com
+  name: conditions.v18.sdp.appgate.com
 spec:
-  group: beta.appgate.com
+  group: v18.sdp.appgate.com
   names:
-    kind: Condition-v18
-    plural: conditions-v18
+    kind: Condition
+    plural: conditions
     shortNames:
-    - con-v18
-    singular: condition-v18
+    - con
+    singular: condition
   scope: Namespaced
   versions:
   - name: v1
@@ -215,15 +215,15 @@ spec:
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: entitlements-v18.beta.appgate.com
+  name: entitlements.v18.sdp.appgate.com
 spec:
-  group: beta.appgate.com
+  group: v18.sdp.appgate.com
   names:
-    kind: Entitlement-v18
-    plural: entitlements-v18
+    kind: Entitlement
+    plural: entitlements
     shortNames:
-    - ent-v18
-    singular: entitlement-v18
+    - ent
+    singular: entitlement
   scope: Namespaced
   versions:
   - name: v1
@@ -326,15 +326,15 @@ spec:
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: ringfencerules-v18.beta.appgate.com
+  name: ringfencerules.v18.sdp.appgate.com
 spec:
-  group: beta.appgate.com
+  group: v18.sdp.appgate.com
   names:
-    kind: RingfenceRule-v18
-    plural: ringfencerules-v18
+    kind: RingfenceRule
+    plural: ringfencerules
     shortNames:
-    - rin-v18
-    singular: ringfencerule-v18
+    - rin
+    singular: ringfencerule
   scope: Namespaced
   versions:
   - name: v1
@@ -389,15 +389,15 @@ spec:
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: appliances-v18.beta.appgate.com
+  name: appliances.v18.sdp.appgate.com
 spec:
-  group: beta.appgate.com
+  group: v18.sdp.appgate.com
   names:
-    kind: Appliance-v18
-    plural: appliances-v18
+    kind: Appliance
+    plural: appliances
     shortNames:
-    - app-v18
-    singular: appliance-v18
+    - app
+    singular: appliance
   scope: Namespaced
   versions:
   - name: v1
@@ -1081,15 +1081,15 @@ spec:
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: sites-v18.beta.appgate.com
+  name: sites.v18.sdp.appgate.com
 spec:
-  group: beta.appgate.com
+  group: v18.sdp.appgate.com
   names:
-    kind: Site-v18
-    plural: sites-v18
+    kind: Site
+    plural: sites
     shortNames:
-    - sit-v18
-    singular: site-v18
+    - sit
+    singular: site
   scope: Namespaced
   versions:
   - name: v1
@@ -1406,15 +1406,15 @@ spec:
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: ippools-v18.beta.appgate.com
+  name: ippools.v18.sdp.appgate.com
 spec:
-  group: beta.appgate.com
+  group: v18.sdp.appgate.com
   names:
-    kind: IpPool-v18
-    plural: ippools-v18
+    kind: IpPool
+    plural: ippools
     shortNames:
-    - ipp-v18
-    singular: ippool-v18
+    - ipp
+    singular: ippool
   scope: Namespaced
   versions:
   - name: v1
@@ -1476,15 +1476,15 @@ spec:
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: identityproviders-v18.beta.appgate.com
+  name: identityproviders.v18.sdp.appgate.com
 spec:
-  group: beta.appgate.com
+  group: v18.sdp.appgate.com
   names:
-    kind: IdentityProvider-v18
-    plural: identityproviders-v18
+    kind: IdentityProvider
+    plural: identityproviders
     shortNames:
-    - ide-v18
-    singular: identityprovider-v18
+    - ide
+    singular: identityprovider
   scope: Namespaced
   versions:
   - name: v1
@@ -1708,15 +1708,15 @@ spec:
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: localusers-v18.beta.appgate.com
+  name: localusers.v18.sdp.appgate.com
 spec:
-  group: beta.appgate.com
+  group: v18.sdp.appgate.com
   names:
-    kind: LocalUser-v18
-    plural: localusers-v18
+    kind: LocalUser
+    plural: localusers
     shortNames:
-    - loc-v18
-    singular: localuser-v18
+    - loc
+    singular: localuser
   scope: Namespaced
   versions:
   - name: v1
@@ -1766,15 +1766,15 @@ spec:
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: serviceusers-v18.beta.appgate.com
+  name: serviceusers.v18.sdp.appgate.com
 spec:
-  group: beta.appgate.com
+  group: v18.sdp.appgate.com
   names:
-    kind: ServiceUser-v18
-    plural: serviceusers-v18
+    kind: ServiceUser
+    plural: serviceusers
     shortNames:
-    - ser-v18
-    singular: serviceuser-v18
+    - ser
+    singular: serviceuser
   scope: Namespaced
   versions:
   - name: v1
@@ -1814,15 +1814,15 @@ spec:
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: administrativeroles-v18.beta.appgate.com
+  name: administrativeroles.v18.sdp.appgate.com
 spec:
-  group: beta.appgate.com
+  group: v18.sdp.appgate.com
   names:
-    kind: AdministrativeRole-v18
-    plural: administrativeroles-v18
+    kind: AdministrativeRole
+    plural: administrativeroles
     shortNames:
-    - adm-v18
-    singular: administrativerole-v18
+    - adm
+    singular: administrativerole
   scope: Namespaced
   versions:
   - name: v1
@@ -1883,15 +1883,15 @@ spec:
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: mfaproviders-v18.beta.appgate.com
+  name: mfaproviders.v18.sdp.appgate.com
 spec:
-  group: beta.appgate.com
+  group: v18.sdp.appgate.com
   names:
-    kind: MfaProvider-v18
-    plural: mfaproviders-v18
+    kind: MfaProvider
+    plural: mfaproviders
     shortNames:
-    - mfa-v18
-    singular: mfaprovider-v18
+    - mfa
+    singular: mfaprovider
   scope: Namespaced
   versions:
   - name: v1
@@ -1948,15 +1948,15 @@ spec:
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: adminmfasettingss-v18.beta.appgate.com
+  name: adminmfasettingss.v18.sdp.appgate.com
 spec:
-  group: beta.appgate.com
+  group: v18.sdp.appgate.com
   names:
-    kind: AdminMfaSettings-v18
-    plural: adminmfasettingss-v18
+    kind: AdminMfaSettings
+    plural: adminmfasettingss
     shortNames:
-    - adi-v18
-    singular: adminmfasettings-v18
+    - adi
+    singular: adminmfasettings
   scope: Namespaced
   versions:
   - name: v1
@@ -1979,15 +1979,15 @@ spec:
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: trustedcertificates-v18.beta.appgate.com
+  name: trustedcertificates.v18.sdp.appgate.com
 spec:
-  group: beta.appgate.com
+  group: v18.sdp.appgate.com
   names:
-    kind: TrustedCertificate-v18
-    plural: trustedcertificates-v18
+    kind: TrustedCertificate
+    plural: trustedcertificates
     shortNames:
-    - tru-v18
-    singular: trustedcertificate-v18
+    - tru
+    singular: trustedcertificate
   scope: Namespaced
   versions:
   - name: v1
@@ -2018,15 +2018,15 @@ spec:
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: criteriascriptss-v18.beta.appgate.com
+  name: criteriascriptss.v18.sdp.appgate.com
 spec:
-  group: beta.appgate.com
+  group: v18.sdp.appgate.com
   names:
-    kind: CriteriaScripts-v18
-    plural: criteriascriptss-v18
+    kind: CriteriaScripts
+    plural: criteriascriptss
     shortNames:
-    - cri-v18
-    singular: criteriascripts-v18
+    - cri
+    singular: criteriascripts
   scope: Namespaced
   versions:
   - name: v1
@@ -2057,15 +2057,15 @@ spec:
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: devicescripts-v18.beta.appgate.com
+  name: devicescripts.v18.sdp.appgate.com
 spec:
-  group: beta.appgate.com
+  group: v18.sdp.appgate.com
   names:
-    kind: DeviceScript-v18
-    plural: devicescripts-v18
+    kind: DeviceScript
+    plural: devicescripts
     shortNames:
-    - dev-v18
-    singular: devicescript-v18
+    - dev
+    singular: devicescript
   scope: Namespaced
   versions:
   - name: v1
@@ -2099,15 +2099,15 @@ spec:
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: entitlementscripts-v18.beta.appgate.com
+  name: entitlementscripts.v18.sdp.appgate.com
 spec:
-  group: beta.appgate.com
+  group: v18.sdp.appgate.com
   names:
-    kind: EntitlementScript-v18
-    plural: entitlementscripts-v18
+    kind: EntitlementScript
+    plural: entitlementscripts
     shortNames:
-    - enr-v18
-    singular: entitlementscript-v18
+    - enr
+    singular: entitlementscript
   scope: Namespaced
   versions:
   - name: v1
@@ -2141,15 +2141,15 @@ spec:
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: appliancecustomizations-v18.beta.appgate.com
+  name: appliancecustomizations.v18.sdp.appgate.com
 spec:
-  group: beta.appgate.com
+  group: v18.sdp.appgate.com
   names:
-    kind: ApplianceCustomization-v18
-    plural: appliancecustomizations-v18
+    kind: ApplianceCustomization
+    plural: appliancecustomizations
     shortNames:
-    - apt-v18
-    singular: appliancecustomization-v18
+    - apt
+    singular: appliancecustomization
   scope: Namespaced
   versions:
   - name: v1
@@ -2180,15 +2180,15 @@ spec:
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: globalsettingss-v18.beta.appgate.com
+  name: globalsettingss.v18.sdp.appgate.com
 spec:
-  group: beta.appgate.com
+  group: v18.sdp.appgate.com
   names:
-    kind: GlobalSettings-v18
-    plural: globalsettingss-v18
+    kind: GlobalSettings
+    plural: globalsettingss
     shortNames:
-    - glo-v18
-    singular: globalsettings-v18
+    - glo
+    singular: globalsettings
   scope: Namespaced
   versions:
   - name: v1
@@ -2250,15 +2250,15 @@ spec:
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: clientconnections-v18.beta.appgate.com
+  name: clientconnections.v18.sdp.appgate.com
 spec:
-  group: beta.appgate.com
+  group: v18.sdp.appgate.com
   names:
-    kind: ClientConnection-v18
-    plural: clientconnections-v18
+    kind: ClientConnection
+    plural: clientconnections
     shortNames:
-    - cli-v18
-    singular: clientconnection-v18
+    - cli
+    singular: clientconnection
   scope: Namespaced
   versions:
   - name: v1
