--- a/tests/resources/crd/v14/appliance.yaml
+++ b/tests/resources/crd/v14/appliance.yaml
@@ -1,15 +1,15 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: appliances-v14.beta.appgate.com
+  name: appliances.v14.sdp.appgate.com
 spec:
-  group: beta.appgate.com
+  group: v14.sdp.appgate.com
   names:
-    kind: Appliance-v14
-    plural: appliances-v14
+    kind: Appliance
+    plural: appliances
     shortNames:
-    - app-v14
-    singular: appliance-v14
+    - app
+    singular: appliance
   scope: Namespaced
   versions:
   - name: v1
