--- a/tests/resources/crd/v14/condition.yaml
+++ b/tests/resources/crd/v14/condition.yaml
@@ -1,15 +1,15 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: conditions-v14.beta.appgate.com
+  name: conditions.v14.sdp.appgate.com
 spec:
-  group: beta.appgate.com
+  group: v14.sdp.appgate.com
   names:
-    kind: Condition-v14
-    plural: conditions-v14
+    kind: Condition
+    plural: conditions
     shortNames:
-    - con-v14
-    singular: condition-v14
+    - con
+    singular: condition
   scope: Namespaced
   versions:
   - name: v1
