--- a/tests/resources/crd/v14/identityprovider.yaml
+++ b/tests/resources/crd/v14/identityprovider.yaml
@@ -1,15 +1,15 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: identityproviders-v14.beta.appgate.com
+  name: identityproviders.v14.sdp.appgate.com
 spec:
-  group: beta.appgate.com
+  group: v14.sdp.appgate.com
   names:
-    kind: IdentityProvider-v14
-    plural: identityproviders-v14
+    kind: IdentityProvider
+    plural: identityproviders
     shortNames:
-    - ide-v14
-    singular: identityprovider-v14
+    - ide
+    singular: identityprovider
   scope: Namespaced
   versions:
   - name: v1
