--- a/tests/resources/crd/v14/policy.yaml
+++ b/tests/resources/crd/v14/policy.yaml
@@ -1,15 +1,15 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: policies-v14.beta.appgate.com
+  name: policies.v14.sdp.appgate.com
 spec:
-  group: beta.appgate.com
+  group: v14.sdp.appgate.com
   names:
-    kind: Policy-v14
-    plural: policies-v14
+    kind: Policy
+    plural: policies
     shortNames:
-    - pol-v14
-    singular: policy-v14
+    - pol
+    singular: policy
   scope: Namespaced
   versions:
   - name: v1
