--- a/tests/resources/crd/v15/appliance.yaml
+++ b/tests/resources/crd/v15/appliance.yaml
@@ -1,15 +1,15 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: appliances-v15.beta.appgate.com
+  name: appliances.v15.sdp.appgate.com
 spec:
-  group: beta.appgate.com
+  group: v15.sdp.appgate.com
   names:
-    kind: Appliance-v15
-    plural: appliances-v15
+    kind: Appliance
+    plural: appliances
     shortNames:
-    - app-v15
-    singular: appliance-v15
+    - app
+    singular: appliance
   scope: Namespaced
   versions:
   - name: v1
