--- a/tests/resources/crd/v15/condition.yaml
+++ b/tests/resources/crd/v15/condition.yaml
@@ -1,15 +1,15 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: conditions-v15.beta.appgate.com
+  name: conditions.v15.sdp.appgate.com
 spec:
-  group: beta.appgate.com
+  group: v15.sdp.appgate.com
   names:
-    kind: Condition-v15
-    plural: conditions-v15
+    kind: Condition
+    plural: conditions
     shortNames:
-    - con-v15
-    singular: condition-v15
+    - con
+    singular: condition
   scope: Namespaced
   versions:
   - name: v1
