--- a/tests/resources/crd/v15/identityprovider.yaml
+++ b/tests/resources/crd/v15/identityprovider.yaml
@@ -1,15 +1,15 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: identityproviders-v15.beta.appgate.com
+  name: identityproviders.v15.sdp.appgate.com
 spec:
-  group: beta.appgate.com
+  group: v15.sdp.appgate.com
   names:
-    kind: IdentityProvider-v15
-    plural: identityproviders-v15
+    kind: IdentityProvider
+    plural: identityproviders
     shortNames:
-    - ide-v15
-    singular: identityprovider-v15
+    - ide
+    singular: identityprovider
   scope: Namespaced
   versions:
   - name: v1
