--- a/tests/resources/crd/v15/ippool.yaml
+++ b/tests/resources/crd/v15/ippool.yaml
@@ -1,15 +1,15 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: ippools-v15.beta.appgate.com
+  name: ippools.v15.sdp.appgate.com
 spec:
-  group: beta.appgate.com
+  group: v15.sdp.appgate.com
   names:
-    kind: IpPool-v15
-    plural: ippools-v15
+    kind: IpPool
+    plural: ippools
     shortNames:
-    - ipp-v15
-    singular: ippool-v15
+    - ipp
+    singular: ippool
   scope: Namespaced
   versions:
   - name: v1
