--- a/tests/resources/crd/v15/policy.yaml
+++ b/tests/resources/crd/v15/policy.yaml
@@ -1,15 +1,15 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: policies-v15.beta.appgate.com
+  name: policies.v15.sdp.appgate.com
 spec:
-  group: beta.appgate.com
+  group: v15.sdp.appgate.com
   names:
-    kind: Policy-v15
-    plural: policies-v15
+    kind: Policy
+    plural: policies
     shortNames:
-    - pol-v15
-    singular: policy-v15
+    - pol
+    singular: policy
   scope: Namespaced
   versions:
   - name: v1
