--- a/tests/resources/crd/v16/appliance.yaml
+++ b/tests/resources/crd/v16/appliance.yaml
@@ -1,15 +1,15 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: appliances-v16.beta.appgate.com
+  name: appliances.v16.sdp.appgate.com
 spec:
-  group: beta.appgate.com
+  group: v16.sdp.appgate.com
   names:
-    kind: Appliance-v16
-    plural: appliances-v16
+    kind: Appliance
+    plural: appliances
     shortNames:
-    - app-v16
-    singular: appliance-v16
+    - app
+    singular: appliance
   scope: Namespaced
   versions:
   - name: v1
