--- a/tests/resources/crd/v16/entitlement.yaml
+++ b/tests/resources/crd/v16/entitlement.yaml
@@ -1,15 +1,15 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: entitlements-v16.beta.appgate.com
+  name: entitlements.v16.sdp.appgate.com
 spec:
-  group: beta.appgate.com
+  group: v16.sdp.appgate.com
   names:
-    kind: Entitlement-v16
-    plural: entitlements-v16
+    kind: Entitlement
+    plural: entitlements
     shortNames:
-    - ent-v16
-    singular: entitlement-v16
+    - ent
+    singular: entitlement
   scope: Namespaced
   versions:
   - name: v1
