--- a/tests/resources/crd/v16/ippool.yaml
+++ b/tests/resources/crd/v16/ippool.yaml
@@ -1,15 +1,15 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: ippools-v16.beta.appgate.com
+  name: ippools.v16.sdp.appgate.com
 spec:
-  group: beta.appgate.com
+  group: v16.sdp.appgate.com
   names:
-    kind: IpPool-v16
-    plural: ippools-v16
+    kind: IpPool
+    plural: ippools
     shortNames:
-    - ipp-v16
-    singular: ippool-v16
+    - ipp
+    singular: ippool
   scope: Namespaced
   versions:
   - name: v1
