--- a/tests/resources/crd/v16/policy.yaml
+++ b/tests/resources/crd/v16/policy.yaml
@@ -1,15 +1,15 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: policies-v16.beta.appgate.com
+  name: policies.v16.sdp.appgate.com
 spec:
-  group: beta.appgate.com
+  group: v16.sdp.appgate.com
   names:
-    kind: Policy-v16
-    plural: policies-v16
+    kind: Policy
+    plural: policies
     shortNames:
-    - pol-v16
-    singular: policy-v16
+    - pol
+    singular: policy
   scope: Namespaced
   versions:
   - name: v1
