--- a/tests/resources/crd/v17/appliance.yaml
+++ b/tests/resources/crd/v17/appliance.yaml
@@ -1,15 +1,15 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: appliances-v17.beta.appgate.com
+  name: appliances.v17.sdp.appgate.com
 spec:
-  group: beta.appgate.com
+  group: v17.sdp.appgate.com
   names:
-    kind: Appliance-v17
-    plural: appliances-v17
+    kind: Appliance
+    plural: appliances
     shortNames:
-    - app-v17
-    singular: appliance-v17
+    - app
+    singular: appliance
   scope: Namespaced
   versions:
   - name: v1
