--- a/tests/resources/crd/v17/condition.yaml
+++ b/tests/resources/crd/v17/condition.yaml
@@ -1,15 +1,15 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: conditions-v17.beta.appgate.com
+  name: conditions.v17.sdp.appgate.com
 spec:
-  group: beta.appgate.com
+  group: v17.sdp.appgate.com
   names:
-    kind: Condition-v17
-    plural: conditions-v17
+    kind: Condition
+    plural: conditions
     shortNames:
-    - con-v17
-    singular: condition-v17
+    - con
+    singular: condition
   scope: Namespaced
   versions:
   - name: v1
