--- a/tests/resources/crd/v17/identityprovider.yaml
+++ b/tests/resources/crd/v17/identityprovider.yaml
@@ -1,15 +1,15 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: identityproviders-v17.beta.appgate.com
+  name: identityproviders.v17.sdp.appgate.com
 spec:
-  group: beta.appgate.com
+  group: v17.sdp.appgate.com
   names:
-    kind: IdentityProvider-v17
-    plural: identityproviders-v17
+    kind: IdentityProvider
+    plural: identityproviders
     shortNames:
-    - ide-v17
-    singular: identityprovider-v17
+    - ide
+    singular: identityprovider
   scope: Namespaced
   versions:
   - name: v1
