--- a/tests/resources/crd/v17/ippool.yaml
+++ b/tests/resources/crd/v17/ippool.yaml
@@ -1,15 +1,15 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: ippools-v17.beta.appgate.com
+  name: ippools.v17.sdp.appgate.com
 spec:
-  group: beta.appgate.com
+  group: v17.sdp.appgate.com
   names:
-    kind: IpPool-v17
-    plural: ippools-v17
+    kind: IpPool
+    plural: ippools
     shortNames:
-    - ipp-v17
-    singular: ippool-v17
+    - ipp
+    singular: ippool
   scope: Namespaced
   versions:
   - name: v1
