--- a/tests/resources/crd/v17/policy.yaml
+++ b/tests/resources/crd/v17/policy.yaml
@@ -1,15 +1,15 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: policies-v17.beta.appgate.com
+  name: policies.v17.sdp.appgate.com
 spec:
-  group: beta.appgate.com
+  group: v17.sdp.appgate.com
   names:
-    kind: Policy-v17
-    plural: policies-v17
+    kind: Policy
+    plural: policies
     shortNames:
-    - pol-v17
-    singular: policy-v17
+    - pol
+    singular: policy
   scope: Namespaced
   versions:
   - name: v1
