--- a/tests/resources/crd/v18/condition.yaml
+++ b/tests/resources/crd/v18/condition.yaml
@@ -1,15 +1,15 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: conditions-v18.beta.appgate.com
+  name: conditions.v18.sdp.appgate.com
 spec:
-  group: beta.appgate.com
+  group: v18.sdp.appgate.com
   names:
-    kind: Condition-v18
-    plural: conditions-v18
+    kind: Condition
+    plural: conditions
     shortNames:
-    - con-v18
-    singular: condition-v18
+    - con
+    singular: condition
   scope: Namespaced
   versions:
   - name: v1
