--- a/tests/resources/crd/v18/entitlement.yaml
+++ b/tests/resources/crd/v18/entitlement.yaml
@@ -1,15 +1,15 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: entitlements-v18.beta.appgate.com
+  name: entitlements.v18.sdp.appgate.com
 spec:
-  group: beta.appgate.com
+  group: v18.sdp.appgate.com
   names:
-    kind: Entitlement-v18
-    plural: entitlements-v18
+    kind: Entitlement
+    plural: entitlements
     shortNames:
-    - ent-v18
-    singular: entitlement-v18
+    - ent
+    singular: entitlement
   scope: Namespaced
   versions:
   - name: v1
