--- a/tests/resources/crd/v18/identityprovider.yaml
+++ b/tests/resources/crd/v18/identityprovider.yaml
@@ -1,15 +1,15 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: identityproviders-v18.beta.appgate.com
+  name: identityproviders.v18.sdp.appgate.com
 spec:
-  group: beta.appgate.com
+  group: v18.sdp.appgate.com
   names:
-    kind: IdentityProvider-v18
-    plural: identityproviders-v18
+    kind: IdentityProvider
+    plural: identityproviders
     shortNames:
-    - ide-v18
-    singular: identityprovider-v18
+    - ide
+    singular: identityprovider
   scope: Namespaced
   versions:
   - name: v1
