--- a/tests/resources/crd/v18/ippool.yaml
+++ b/tests/resources/crd/v18/ippool.yaml
@@ -1,15 +1,15 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: ippools-v18.beta.appgate.com
+  name: ippools.v18.sdp.appgate.com
 spec:
-  group: beta.appgate.com
+  group: v18.sdp.appgate.com
   names:
-    kind: IpPool-v18
-    plural: ippools-v18
+    kind: IpPool
+    plural: ippools
     shortNames:
-    - ipp-v18
-    singular: ippool-v18
+    - ipp
+    singular: ippool
   scope: Namespaced
   versions:
   - name: v1
