--- a/tests/resources/crd/v18/policy.yaml
+++ b/tests/resources/crd/v18/policy.yaml
@@ -1,15 +1,15 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: policies-v18.beta.appgate.com
+  name: policies.v18.sdp.appgate.com
 spec:
-  group: beta.appgate.com
+  group: v18.sdp.appgate.com
   names:
-    kind: Policy-v18
-    plural: policies-v18
+    kind: Policy
+    plural: policies
     shortNames:
-    - pol-v18
-    singular: policy-v18
+    - pol
+    singular: policy
   scope: Namespaced
   versions:
   - name: v1
